unpackaged/main/default/objects/FDService__Fonteva_Service_Module_Class__mdt/FDService__Fonteva_Service_Module_Class__mdt.object-meta.xml
<CustomObject>
    <label>Fonteva Service Module Class</label>
    <pluralLabel>Fonteva Service Module Classes</pluralLabel>
</CustomObject>