unpackaged/main/default/objects/FDService__Fonteva_Service_Module_Class__mdt/fields/FDService__Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>FDService__Apex_Class__c</fullName>
    <label>Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>