unpackaged/main/default/objects/FDService__Fonteva_Service_Module_Class__mdt/fields/FDService__Fonteva_Service_Module__c.field-meta.xml
<CustomField>
    <fullName>FDService__Fonteva_Service_Module__c</fullName>
    <label>Fonteva Service Module</label>
    <referenceTo>FDService__Fonteva_Service_Module__mdt</referenceTo>
    <relationshipLabel>Fonteva Service Module Classes</relationshipLabel>
    <relationshipName>Fonteva_Service_Module_Classes</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>