unpackaged/main/default/objects/FDService__Fonteva_Service_Module_Class__mdt/fields/FDService__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FDService__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>