unpackaged/main/default/objects/FDService__Fonteva_Service_Module_Class__mdt/fields/FDService__Is_Reflect_Disabled__c.field-meta.xml
<CustomField>
    <fullName>FDService__Is_Reflect_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By default, the override class will dynamically have class properties assigned in fromSObject(SObject rec) and toSObject().  Setting this value to true will allow you to assign values directly in your class and will make the code more performant.</description>
    <inlineHelpText>By default, the override class will dynamically have class properties assigned in fromSObject(SObject rec) and toSObject().  Setting this value to true will allow you to assign values directly in your class and will make the code more performant.</inlineHelpText>
    <label>Is Reflect Disabled</label>
    <type>Checkbox</type>
</CustomField>